
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-05-22 DP  1.6.0  Display the current character number in the query tool
                      status bar.
2006-05-22 DP  1.4.3  Allow non-superusers to edit roles where appropriate
                      [Thomas Sondag]
2006-05-22 DP  1.6.0  Add options to show line ends and whitespaces in the
                      query tool.
2006-05-17 DP  1.4.3  Allow non-superuser roles with the appropriate 
                      permissions to create roles and DBs.
2006-05-15 DP  1.4.3  Fix a bug in the pgpass save code that could
                      damage files.
2006-05-15 DP  1.6.0  Add a word wrap option to the query tool editor.
2006-05-15 DP  1.6.0  Add brace highlighting to the SQL Text Box control.
2006-05-15 DP  1.6.0  Don't save the position/size when closing minimised
                      Windows as the size values will be wrong on some OSs.
2006-05-15 DP  1.6.0  Add a Copy menu option to the main form to copy from the
                      SQL pane.
2006-05-15 DP  1.6.0  Detect and warn the user of concurrent edits of
                      functions, views and job steps.
2006-05-12 DP  1.6.0  Allow the user to choose whether or not to restore the
                      environment when reconnecting to a particular server.
2006-05-10 DP  1.6.0  Allow pasting of entire rows in the View Data tool
                      [Edward Di Geronimo Jr]
2006-05-10 DP  1.6.0  Use escape string syntax (E'foo') where required.
2006-05-09 DP  1.6.0  Update the Windows build environment for VC++ 8.0 (now
                      free from http://msdn.microsoft.com/vstudio/express/)
2006-05-05 DP  1.6.0  Add an internal XML reporting API, HTML XSL stylesheet