@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-05-23 DP  1.6.0  Add a guru hint to advise users to use the CREATE script
+                      tool to edit function/view code in the Query Tool.
 2006-05-22 DP  1.6.0  Display the current character number in the query tool
                       status bar.
 2006-05-22 DP  1.4.3  Allow non-superusers to edit roles where appropriate
